--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@prisma/client": "^5.19.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "prisma": "^5.19.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
